fix download and media page on safari

--- a/assets/styles/app/aboutus.css
+++ b/assets/styles/app/aboutus.css
@@ -29,3 +29,7 @@
     text-align: justify;
     text-indent: 45px;
 }
+
+#aboutus .small-menu {
+    left: 30px;
+}
